--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.0",
     "@mantine/core": "^5.0.3",
     "@mantine/form": "^5.0.3",
+    "@mantine/hooks": "^5.1.1",
     "@tabler/icons": "^1.78.1",
     "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
