--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
-    "@mantine/core": "^5.0.3",
-    "@mantine/form": "^5.0.3",
-    "@mantine/hooks": "^5.1.1",
+    "@mantine/core": "^5.2.0",
+    "@mantine/form": "^5.2.0",
+    "@mantine/hooks": "^5.2.0",
     "@tabler/icons": "^1.78.1",
     "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.29.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.1.13"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
