--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^5.2.0",
     "@mantine/form": "^5.2.0",
     "@mantine/hooks": "^5.2.0",
+    "@mantine/notifications": "^5.10.3",
     "@tabler/icons": "^1.78.1",
     "@tanstack/react-query": "^4.0.10",
     "axios": "^1.2.2",
