--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@mantine/form": "^5.10.3",
     "@mantine/hooks": "^5.10.3",
     "@mantine/notifications": "^5.10.3",
-    "@tabler/icons": "^2.15.0",
+    "@tabler/icons-react": "^2.15.0",
     "@tanstack/react-query": "^4.0.10",
-    "date-fns": "^2.29.2",
     "axios": "^1.2.2",
+    "date-fns": "^2.29.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.6.1",
