--- a/package.json
+++ b/package.json
@@ -9,26 +9,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@mantine/core": "^5.10.3",
-    "@mantine/form": "^6.0.7",
-    "@mantine/hooks": "^5.10.3",
-    "@mantine/notifications": "^5.10.3",
-    "@tabler/icons-react": "^2.15.0",
-    "@tanstack/react-query": "^4.29.1",
-    "axios": "^1.3.5",
-    "date-fns": "^2.29.2",
+    "@emotion/react": "^11.11.1",
+    "@mantine/core": "^7.2.2",
+    "@mantine/form": "^7.2.2",
+    "@mantine/hooks": "^7.2.2",
+    "@mantine/notifications": "^7.2.2",
+    "@tabler/icons-react": "^2.42.0",
+    "@tanstack/react-query": "^5.12.1",
+    "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.6.1",
-    "react-router-dom": "^6.10.0",
-    "recharts": "^2.5.0"
+    "react-router": "^6.20.0",
+    "react-router-dom": "^6.20.0",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
-    "@types/react": "^18.0.35",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^5.0.4",
-    "vite": "^4.2.1"
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.0",
+    "postcss": "^8.4.31",
+    "postcss-preset-mantine": "^1.11.0",
+    "postcss-simple-vars": "^7.0.1",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.4",
+    "vite-plugin-checker": "^0.6.2"
   }
 }
